# ziptie

./: README.md  pre_push.py  pyproject.toml
src/ziptie/: __main__.py  python_sysconf.py
src/ziptie/zig_scripts/: ziptie.build.zig
