[tool.poetry]
name = "ziptie"
version = "0.0.1"
description = "Build C/C++/Zig extension modules for CPython using Zig Compiler"
authors = ["Yoshikage Kira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.2"

[tool.poetry.group.dev.dependencies]
ziggy-pydust = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
