[tool.poetry]
name = "ziptie"
version = "0.0.1"
description = "Build C/C++/Zig extension modules for CPython using Zig Compiler"
authors = ["Yoshikage Kira"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ziptie", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.2"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
ziggy-pydust = "^0.23.2"

[tool.poetry.group.typing.dependencies]
mypy = "^1.8.0"

[tool.poetry.group.linting.dependencies]
black = "^23.0.0"
ruff = "^0.2.2"

[tool.poetry.scripts]
ziptie = "ziptie.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[tool.black]
line-length = 160

[tool.ruff]
line-length = 160

